# ST0830-SistemiOperativi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Steno/: byteType.h  commandList.c  commandList.h  implementationThread.c  implementationThread.h  list.c  list.h  main.c  manageFile.c  manageFile.h  stenography.c  stenography.h  utilities.c  utilities.h
test/: input_text.TXT  input_text.txt
